[project]
name = "bert-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=1.24.3",
    "pandas>=2.1.0",
    "opencv-python>=4.8.1.78",
    "pyyaml==5.3.1",
    "pytesseract>=0.3.13",
    "scikit-learn>=1.6.1",
    "tensorflow==2.13.1",
    "transformers>=4.49.0",
]
